WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205017
(
r252889
) webrtc/peerconnection-page-cache.html is crashing on iOS Debug
https://bugs.webkit.org/show_bug.cgi?id=205017
Summary
(r252889) webrtc/peerconnection-page-cache.html is crashing on iOS Debug
Truitt Savell
Reported
2019-12-09 10:03:16 PST
webrtc/peerconnection-page-cache.html This test added in
https://trac.webkit.org/changeset/252889/webkit
has been crashing on iOS Debug sense introduction History:
https://results.webkit.org/?suite=layout-tests&test=webrtc%2Fpeerconnection-page-cache.html
Crash: No crash log found for com.apple.WebKit.WebContent.Development:58842. stdout: stderr: (used_ids.h:55): Duplicate id found. Reassigning from 102 to 127 (used_ids.h:55): Duplicate id found. Reassigning from 103 to 125 (used_ids.h:55): Duplicate id found. Reassigning from 1 to 14 (used_ids.h:55): Duplicate id found. Reassigning from 3 to 13 (used_ids.h:55): Duplicate id found. Reassigning from 5 to 12 (used_ids.h:55): Duplicate id found. Reassigning from 6 to 11 (balanced_degradation_settings.cc:93): Unsupported size, value ignored. (rtp_video_sender.cc:522): Transmitting payload type without picture ID using NACK+ULPFEC is a waste of bandwidth since ULPFEC packets also have to be retransmitted. Disabling ULPFEC. (physical_socket_server.cc:557): Socket::OPT_DSCP not supported. (physical_socket_server.cc:557): Socket::OPT_DSCP not supported. (physical_socket_server.cc:557): Socket::OPT_DSCP not supported. (physical_socket_server.cc:557): Socket::OPT_DSCP not supported. (helpers.cc:95): VTSessionSetProperty failed to set: DataRateLimits to 1: -12902 (helpers.cc:95): VTSessionSetProperty failed to set: DataRateLimits to 1: -12902 (helpers.cc:95): VTSessionSetProperty failed to set: DataRateLimits to 1: -12902 (helpers.cc:95): VTSessionSetProperty failed to set: DataRateLimits to 1: -12902 (packet_buffer.cc:397): Received H.264-IDR frame (SPS: 0, PPS: 0). Treating as key frame since WebRTC-SpsPpsIdrIsH264Keyframe is disabled (frame_buffer2.cc:472): Frame with (picture_id:spatial_id) (9349:0) has invalid frame references, dropping frame. (frame_buffer2.cc:472): Frame with (picture_id:spatial_id) (9348:0) has invalid frame references, dropping frame. (frame_buffer2.cc:472): Frame with (picture_id:spatial_id) (9347:0) has invalid frame references, dropping frame. (frame_buffer2.cc:472): Frame with (picture_id:spatial_id) (9344:0) has invalid frame references, dropping frame. ASSERTION FAILED: index != notFound ./platform/audio/PlatformMediaSessionManager.cpp(282) : void WebCore::PlatformMediaSessionManager::setCurrentSession(WebCore::PlatformMediaSession &) 1 0x79ba98f89 WTFCrash 2 0x7a06a674b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x7a3aa7e1f WebCore::PlatformMediaSessionManager::setCurrentSession(WebCore::PlatformMediaSession&) 4 0x7a3aa793b WebCore::PlatformMediaSessionManager::sessionWillBeginPlayback(WebCore::PlatformMediaSession&) 5 0x7a1ad03d7 WebCore::MediaSessionManagerCocoa::sessionWillBeginPlayback(WebCore::PlatformMediaSession&) 6 0x7a3aa5cb6 WebCore::PlatformMediaSession::clientWillBeginPlayback() 7 0x7a3101a0f WebCore::MediaElementSession::clientWillBeginPlayback() 8 0x7a2ff539e WebCore::HTMLMediaElement::updatePlayState() 9 0x7a3048dcc WebCore::HTMLMediaElement::scheduleUpdatePlayState()::$_31::operator()() const 10 0x7a3048d39 WTF::Detail::CallableWrapper<WebCore::HTMLMediaElement::scheduleUpdatePlayState()::$_31, void>::call() 11 0x7a06ba79a WTF::Function<void ()>::operator()() const 12 0x7a3029436 WebCore::DeferrableTask<WebCore::Timer>::scheduleTask(WTF::Function<void ()>&&)::'lambda'()::operator()() const 13 0x7a3029289 WTF::Detail::CallableWrapper<WebCore::DeferrableTask<WebCore::Timer>::scheduleTask(WTF::Function<void ()>&&)::'lambda'(), void>::call() 14 0x7a06ba79a WTF::Function<void ()>::operator()() const 15 0x7a3a1fade WebCore::TaskDispatcher<WebCore::Timer>::dispatchOneTask() 16 0x7a3a1f790 WebCore::TaskDispatcher<WebCore::Timer>::sharedTimerFired() 17 0x7a3a253e1 WebCore::TaskDispatcher<WebCore::Timer>::sharedTimer()::$_1::operator()() const 18 0x7a3a253a9 WTF::Detail::CallableWrapper<WebCore::TaskDispatcher<WebCore::Timer>::sharedTimer()::$_1, void>::call() 19 0x7a06ba79a WTF::Function<void ()>::operator()() const 20 0x7a0772379 WebCore::Timer::fired() 21 0x7a3a67e2a WebCore::ThreadTimers::sharedTimerFiredInternal() 22 0x7a3a733a1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 23 0x7a3a73359 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 24 0x7a06ba79a WTF::Function<void ()>::operator()() const 25 0x7a3a36c87 WebCore::MainThreadSharedTimer::fired() 26 0x7a3ada266 WebCore::timerFired(__CFRunLoopTimer*, void*) 27 0x7fff23b0d994 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 28 0x7fff23b0d682 __CFRunLoopDoTimer 29 0x7fff23b0ccda __CFRunLoopDoTimers 30 0x7fff23b07a4e __CFRunLoopRun 31 0x7fff23b06e66 CFRunLoopRunSpecific
Attachments
Patch
(8.63 KB, patch)
2019-12-10 23:18 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-09 10:05:00 PST
<
rdar://problem/57757026
>
Truitt Savell
Comment 2
2019-12-09 10:37:43 PST
Skipping test while it is being investigated
youenn fablet
Comment 3
2019-12-10 23:18:04 PST
Created
attachment 385358
[details]
Patch
WebKit Commit Bot
Comment 4
2019-12-11 09:39:21 PST
Comment on
attachment 385358
[details]
Patch Clearing flags on attachment: 385358 Committed
r253375
: <
https://trac.webkit.org/changeset/253375
>
WebKit Commit Bot
Comment 5
2019-12-11 09:39:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug