Source/WebCore/platform/GenericTaskQueue.h
@@ -39,15 +39,15 @@ namespace WebCore {
 template <typename T>
 class TaskDispatcher {
 public:
-    TaskDispatcher(T* context)
+    explicit TaskDispatcher(T* context)
         : m_context(context)
     {
     }
 
-    void postTask(WTF::Function<void()>&& f)
+    void postTask(Function<void()>&& function)
     {
         ASSERT(m_context);
-        m_context->postTask(WTFMove(f));
+        m_context->enqueueTaskForDispatcher(WTFMove(function));
     }
 
 private:
@@ -58,7 +58,7 @@ template<>
 class TaskDispatcher<Timer> : public CanMakeWeakPtr<TaskDispatcher<Timer>> {
 public:
     TaskDispatcher();
-    void postTask(WTF::Function<void()>&&);
+    void postTask(Function<void()>&&);
 
 private:
     static Timer& sharedTimer();
@@ -68,7 +68,7 @@ private:
 
     void dispatchOneTask();
 
-    Deque<WTF::Function<void()>> m_pendingTasks;
+    Deque<Function<void()>> m_pendingTasks;
 };
 
 template <typename T>
@@ -80,12 +80,12 @@ public:
     {
     }
 
-    GenericTaskQueue(T& t)
+    explicit GenericTaskQueue(T& t)
         : m_dispatcher(&t)
     {
     }
 
-    GenericTaskQueue(T* t)
+    explicit GenericTaskQueue(T* t)
         : m_dispatcher(t)
         , m_isClosed(!t)
     {
